--- a/styles/style.css
+++ b/styles/style.css
@@ -2,21 +2,17 @@
 
 :root {
     --dark: #303030;
+    --darker: #262625;
     --cream: #eddec4;
-    --white: #f7f1e6;
-    --beige: #fcf3b4;
-    --light-yellow: #d1b867;
-    --yellow: #e7a134;
-    --orange: #e96630;
+    --passpartou: #f7f1e6;
     --red: #d24322;
-    --blue: #06888a;
 
     --hover: all .2s ease-in-out;
-
 }
 
 html {
     scroll-behavior: smooth;
+
 }
 
 * {
@@ -31,10 +27,24 @@ body {
     font-family: 'Josefin Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
-h2 {
-    font-size: 3rem;
-}
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #262625;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(79, 76, 76);
+    border-radius: 10px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    cursor: grab;
+  }
 
 .wrapper {
     color: var(--cream);
@@ -64,14 +74,14 @@ h2 {
 .header__title-span3 {
     background-color: var(--cream);
     color: var(--dark);
-    font-size: 3rem;
+    font-size: clamp(2rem, 4vw, 3rem);
     justify-self: start;
     padding: .5rem .5rem 0 .5rem;
 }
 
 .header__title-span2 {
     background-color: var(--red);
-    font-size: 10rem;
+    font-size: clamp(5rem, 12vw, 12rem);
     padding: 1rem 1rem 0 1rem;
     margin: .5rem;
 }
@@ -88,7 +98,6 @@ h2 {
 .utility-bar {
     display: flex;
     align-items: center;
-    margin: 2rem 0;
     padding: 1rem 0;
     position: sticky;
     background-color: var(--dark);
@@ -108,7 +117,7 @@ h2 {
     display: inline-block;
     text-align: center;
     height: 3rem;
-    min-width: 6rem;
+    min-width: 6.5rem;
     margin-left: 1rem;
     color: var(--dark);
     background-color: var(--cream);
@@ -123,17 +132,29 @@ h2 {
     border: 2px solid var(--cream);
 }
 
+.trailer-section::before {
+    transform: skewY(7.8deg);
+    content: "";
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 11.2%;
+    left: 0;
+    background-color: var(--darker);
+}
+
 .trailer-section {
     position: relative;
-    z-index: 5;
+    z-index: 2;
     display: grid;
     gap: 1rem;
     padding: 8rem 2rem;
-    margin: 5rem 0;
+
     grid-template-columns: repeat(3, 1fr);
 }
 
 .trailer-section::after {
+    z-index: 1;
     transform: skewY(-8deg);
     content: "";
     width: 100%;
@@ -144,40 +165,15 @@ h2 {
     background-color: var(--cream);
 }
 
-.toplist-section::before,
-.favorite-section::before,
-.search-section::before {
-    transform: skewY(8deg);
-    content: "";
-    width: 100%;
-    height: 70%;
-    position: absolute;
-    top: 20%;
-    left: 0;
-    background-color: var(--red);
-}
-
-.toplist-section::after,
-.favorite-section::after,
-.search-section::after {
-    transform: skewY(-8deg);
-    content: "";
-    width: 100%;
-    height: 90%;
-    position: absolute;
-    top: 8%;
-    left: 0;
-    background-color: var(--cream);
-}
-
 .trailer-section__title,
 .toplist-section__title,
 .favorite-section__title,
 .search-section__title {
+    max-height: clamp(2rem, .1vw, 3rem);
     transform: skew(-10deg);
-    grid-area: auto / auto / span 1 / span 3;
+    /* grid-area: auto / auto / span 1 / span 3; */
     display: grid;
-    margin-bottom: 4rem;
+    margin-bottom: 6rem;
     position: relative;
     top: 0%;
     z-index: 10;
@@ -188,7 +184,7 @@ h2 {
 .favorite-section__title-background--top,
 .search-section__title-background--top {
     background-color: var(--cream);
-    font-size: 2rem;
+    font-size: clamp(1.3rem, 4vw, 1.7rem);
     justify-self: start;
     margin-bottom: .3rem;
     padding: .5rem .5rem 0 .5rem;
@@ -198,7 +194,7 @@ h2 {
 .toplist-section__title-background--bottom,
 .favorite-section__title-background--bottom,
 .search-section__title-background--bottom {
-    font-size: 3rem;
+    font-size: clamp(2rem, 6vw, 3rem);
     background-color: var(--red);
     color: var(--cream);
     justify-self: start;
@@ -207,74 +203,78 @@ h2 {
 
 .trailer-section__video-player {
     z-index: 5;
-    grid-area: auto / auto / span 3 / span 3;
+    grid-area: auto / auto / span 3 / span 4;
+    justify-self: center;
     width: 100%;
     aspect-ratio: 16/9;
 }
 
-.trailer-section__navigation-wrapper {
-    display: flex;
-    justify-content: space-around;
-    grid-area: auto / auto / auto / span 3;
-}
 
-.trailer-section__navigation-button {
-    z-index: 5;
-    padding: 1rem;
-    font-weight: 600;
-    font-size: 1.5rem;
-    position: relative;
-    text-decoration: none;
-    background-color: var(--cream);
-    color: var(--dark);
-    transition: var(--hover);
-}
-
-.trailer-section__navigation-button:hover {
-    cursor: pointer;
-    scale: 1.05;
-}
-
-.trailer-section__trailer-counter {
-    z-index: 5;
-    padding: 1rem;
-    font-weight: 600;
-    font-size: 2rem;
-    position: relative;
-    text-decoration: none;
-    background-color: var(--cream);
-    color: var(--dark);
+.toplist-section::before,
+.favorite-section::before,
+.search-section::before {
+    transform: skewY(9deg);
+    content: "";
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    background-color: var(--darker);
 }
 
 .toplist-section,
 .search-section,
 .favorite-section {
+    z-index: 2;
     position: relative;
     display: grid;
-    min-height: 70rem;
+    min-height: 95rem;
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 100px repeat(2, 1fr) 100px;
+    grid-template-areas:
+        "title title title title"
+        "movie movie movie movie"
+        "movie movie movie movie"
+        "navigation navigation navigation navigation";
     padding: 8rem 2rem;
     margin: 5rem 0;
 }
 
 
+.toplist-section::after,
+.favorite-section::after,
+.search-section::after {
+    z-index: 1;
+    transform: skewY(-8deg);
+    content: "";
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 8%;
+    left: 0;
+    background-color: var(--cream);
+
+}
+
 .toplist-section__title,
 .favorite-section__title,
 .search-section__title {
-    grid-area: auto / auto / auto / span 4;
+    grid-area: title;
 }
 
 .toplist-section__movie-container,
 .search-section__movie-container,
 .favorite-section__movie-container {
+    width: 100%;
     position: relative;
     z-index: 5;
     aspect-ratio: 25/40;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    background-color: var(--white);
+    background-color: var(--passpartou);
     padding: 1rem;
     transition: var(--hover);
 }
@@ -323,21 +323,30 @@ h2 {
     pointer-events: none;
 }
 
-.toplist-section__button-wrapper,
-.favorite-section__button-wrapper {
+.search-section__navigation-wrapper,
+.trailer-section__navigation-wrapper,
+.toplist-section__navigation-wrapper,
+.favorite-section__navigation-wrapper {
+    font-size: clamp(1.3rem, 3vw, 2rem);
     position: relative;
     z-index: 10;
     display: grid;
-    grid-area: auto / auto / auto/ span 4;
+    grid-row: span 1;
+    grid-area: navigation;
     grid-template-columns: repeat(3, 1fr);
 }
 
+.trailer-section__navigation-wrapper {
+    grid-area: auto / auto / auto / span 4;
+}
+
+.search-section__navigation-button,
+.trailer-section__navigation-button,
 .toplist-section__navigation-button,
 .favorite-section__navigation-button {
     justify-self: center;
-    padding: 1rem;
+    padding: clamp(.3rem, 1vw, 1rem);
     font-weight: 600;
-    font-size: 1.5rem;
     position: relative;
     text-decoration: none;
     color: var(--dark);
@@ -346,31 +355,42 @@ h2 {
     z-index: 10;
 }
 
+.search-section__navigation-button:hover,
+.trailer-section__navigation-button:hover,
+.toplist-section__navigation-button:hover,
+.favorite-section__navigation-button:hover {
+    scale: 1.03;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.search-section__navigation-button--left,
+.trailer-section__navigation-button--left,
 .toplist-section__navigation-button--left,
 .favorite-section__navigation-button--left {
+    align-self: center;
     grid-area: auto / 1 / auto / 1;
 }
 
+.search-section__navigation-button--right,
+.trailer-section__navigation-button--right,
 .toplist-section__navigation-button--right,
 .favorite-section__navigation-button--right {
+    align-self: center;
     grid-area: auto / 3 / auto / 3;
 }
 
-.toplist-section__navigation-button:hover,
-.favorite-section__navigation-button:hover {
-    scale: 1.05;
-}
-
+.search-section__page-counter,
+.trailer-section__trailer-counter,
 .toplist-section__page-counter,
 .favorite-section__page-counter {
+    align-self: center;
     grid-area: auto / 2 / auto / 2;
     justify-self: center;
     z-index: 5;
     padding: 1rem;
     font-weight: 600;
-    font-size: 2rem;
     position: relative;
-    text-decoration: none;
     background-color: var(--cream);
     color: var(--dark);
 }
@@ -418,8 +438,8 @@ h2 {
 .more-info-container__plot-and-poster-wrapper {
     grid-area: 6/1/auto/span 2;
     margin-top: 1rem;
-    grid-template-columns: 1fr 1.7fr;
     display: grid;
+    grid-template-columns: 1fr 1.7fr;
 }
 
 .more-info-container__poster {
@@ -428,7 +448,6 @@ h2 {
 
 .more-info-container__plot-text {
     line-height: 1.5;
-
 }
 
 .footer__home-navigation {
@@ -446,29 +465,37 @@ h2 {
 
 @media screen and (max-width: 1200px) {
 
-    .toplist-section__title,
-    .favorite-section__title,
-    .search-section__title {
-        grid-area: auto / auto / auto / span 3;
-    }
-
     .toplist-section,
     .search-section,
     .favorite-section {
         grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 100px repeat(3, 1fr) 100px;
+        grid-template-areas:
+            "title title title"
+            "movie movie movie"
+            "movie movie movie"
+            "movie movie movie"
+            "navigation navigation navigation";
     }
 
-    .toplist-section__button-wrapper,
-    .favorite-section__button-wrapper {
-        grid-area: auto / auto / auto/ span 3;
+    .toplist-section::before,
+    .favorite-section::before,
+    .search-section::before {
+        transform: skewY(10deg);
+        height: 95%;
+        top: 5%;
     }
 
-    .more-info-container {
-        grid-template-columns: 1fr;
+    .toplist-section::after,
+    .favorite-section::after,
+    .search-section::after {
+        transform: skewY(-9deg);
+        height: 94%;
+        top: 6%;
     }
 }
 
-@media screen and (max-width: 890px) {
+@media screen and (max-width: 900px) {
     .wrapper {
         padding: 0 2rem;
     }
@@ -477,18 +504,25 @@ h2 {
         padding: 0;
     }
 
-
-    .toplist-section__title,
-    .favorite-section__title,
-    .search-section__title {
-        grid-area: auto / auto / auto / span 2;
+    .toplist-section,
+    .search-section,
+    .favorite-section {
+        margin: 0;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 100px repeat(4, 1fr) 100px;
+        grid-template-areas:
+            "title title "
+            "movie movie "
+            "movie movie "
+            "movie movie "
+            "movie movie "
+            "navigation navigation";
     }
 
     .trailer-section__title-background--top,
     .toplist-section__title-background--top,
     .favorite-section__title-background--top,
     .search-section__title-background--top {
-        font-size: 1.5rem;
         margin-bottom: .3rem;
         padding: .5rem .5rem 0 .5rem;
     }
@@ -497,25 +531,21 @@ h2 {
     .toplist-section__title-background--bottom,
     .favorite-section__title-background--bottom,
     .search-section__title-background--bottom {
-        font-size: 2rem;
         padding: .5rem .5rem 0 .5rem;
     }
 
-    .toplist-section,
-    .search-section,
-    .favorite-section {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
+
+    .more-info-container {
+        grid-template-columns: 1fr;
+
     }
 
-    .toplist-section__button-wrapper,
-    .favorite-section__button-wrapper {
-        grid-area: auto / auto / auto/ span 2;
+    .more-info-container__info-wrapper {
+        justify-self: center;
     }
 
     .more-info-container__plot-and-poster-wrapper {
         grid-template-columns: 1fr;
-
     }
 
     .more-info-container__poster {
@@ -531,35 +561,14 @@ h2 {
 @media screen and (max-width: 650px) {
     .wrapper {
         padding: .5rem .5rem;
-        margin: 0;
-    }
-
-    h2 {
-        font-size: 2rem;
-    }
-
-    .header__title-span1,
-    .header__title-span3 {
-        font-size: 2rem;
-
-    }
-
-    .header__title-span2 {
-        font-size: 5rem;
-
-    }
-
-    .toplist-section__title,
-    .favorite-section__title,
-    .search-section__title {
-        grid-area: auto / auto / auto / span 2;
+        margin: 0 auto;
     }
 
     .toplist-section,
     .search-section,
     .favorite-section {
         padding: 5rem .5rem;
-        gap: .5rem;
+        gap: .7rem;
     }
 
     .trailer-section {
@@ -578,29 +587,15 @@ h2 {
         aspect-ratio: 25/41;
     }
 
-    .toplist-section__movie-container:hover,
-    .search-section__movie-container:hover,
-    .favorite-section__movie-container:hover{
-        scale: 1.01;
-    }
-
     .toplist-section__favorite-icon,
     .search-section__favorite-icon,
     .favorite-section__favorite-icon {
         top: 1rem;
         right: 1rem;
     }
-    /* .toplist-section__movie-title,
-    .search-section__movie-title,
-    .favorite-section__movie-title {
-        margin-top: 20rem
-    } */
 }
 
 @media screen and (max-width: 400px) {
-    .wrapper {
-        max-width: 400px;
-    }
 
     .footer__home-navigation {
         padding: 1rem;
